<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dealfaro.luca.backandforthstudio.SecondActivity">

    <TextView
        android:id="@+id/textView1"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_second" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string1"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/activity1Text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string2"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/editText"

    />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300dp"
        android:layout_marginLeft="120dp"
        android:layout_toRightOf="@+id/textView1"
        android:onClick="goFirst"
        android:layout_alignBaseline="@+id/activity1Text"
        android:text="@string/gostring"
    />

    <TextView
        android:id="@+id/activity1Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ph2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="90dp"
    />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity1Text"
        android:layout_below="@+id/activity1Text"
        android:layout_marginTop="21dp"
        android:ems="7">
        <requestFocus/>
    </EditText>

</RelativeLayout>
