<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dealfaro.luca.backandforthstudio.MainActivity">

    <TextView
        android:id="@+id/activity1Title"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_first" />

    <TextView
        android:id="@+id/string1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string1"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/editText" />

    <TextView
        android:id="@+id/string3_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string3"
        android:textSize="20sp"
        android:layout_alignLeft="@+id/string2_label"
        android:layout_below="@+id/string2_label"
        android:layout_marginTop="30sp" />

    <TextView
        android:id="@+id/activity3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/string3_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignLeft="@+id/activity2Text"
        android:text="@string/ph2" />

    <TextView
        android:id="@+id/string2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string2"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/activity2Text" />


    <TextView
        android:id="@+id/activity2Text"
        android:text="@string/ph2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="21dp" />

    <Button
        android:id="@+id/goSecondButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300dp"
        android:layout_marginLeft="120dp"
        android:layout_toRightOf="@+id/activity1Title"
        android:onClick="goSecond"
        android:layout_alignBaseline="@+id/activity2Text"
        android:text="@string/gostring" />

    <Button
        android:id="@+id/goThirdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gostring"
        android:layout_alignBaseline="@id/string3_label"
        android:layout_alignLeft="@id/goSecondButton"
        android:onClick="goThird"
        />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter"
        android:layout_alignBaseline="@id/editText"
        android:layout_alignRight="@id/goSecondButton"
        android:onClick="enterText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity1Title"
        android:layout_below="@+id/activity1Title"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="90dp"
        android:ems="7" >
        <requestFocus/>
    </EditText>

</RelativeLayout>
